--- a/wa-clone/package.json
+++ b/wa-clone/package.json
@@ -13,9 +13,12 @@
     "firebase": "^11.2.0",
     "lucide": "^0.471.0",
     "lucide-react": "^0.471.1",
+    "particles.js": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1"
+    "react-loading-indicators": "^1.0.0",
+    "react-router-dom": "^7.1.1",
+    "sass": "^1.85.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
